--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -41,7 +41,9 @@ body {
 }
 
 html {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: "Hiragino Sans GB", "Microsoft Yahei", "Helvetica Neue", Helvetica, sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
